<resources>
    <string name="app_name">Control</string>
    <string name="settings">Settings</string>
    <string name="timetable">Timetable</string>
    <string name="subjects">Subjects</string>
    <string name="groups">Groups</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="auditory">Auditory</string>
    <string name="save">Save</string>
    <string name="title_hint">Enter the topic of the lesson</string>
    <string name="details">Details</string>
    <string name="auditory_hint">Auditory</string>
    <string name="description_hint">Description</string>
    <string name="lecture">Lection</string>
    <string name="laboratory_work">Laboratory work</string>
    <string name="practice">Practice</string>
    <string name="type_hit">Type:</string>
    <string name="subject_hint">Subject:</string>
    <string name="groups_hint">Groups:</string>
    <string name="edit">Edit</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="students">Students</string>
    <string name="change_subject_name">Change subject\'s name</string>
    <string name="cancel">Cancel</string>
    <string name="delete_subject">Delete subject \"%s\"?</string>
    <string name="ok">OK</string>
    <string name="add_new_subject">Add new subject</string>
    <string name="change_group_s_name">Change group\'s name</string>
    <string name="delete_group">Delete group \"%s\"?</string>
    <string name="add_new_group">Add new group</string>
    <string name="delete_student">Delete student %s?</string>
    <string name="change_student_data">Change student\'s data</string>
    <string name="add_new_student">Add new student</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="enter_data">Enter data</string>
    <string name="edit_student_data">Edit student\'s data</string>
    <string name="blank_content">Content mustn\'t be blank!</string>
    <string name="blank_name">First name and last name cannot be blank!</string>
    <string name="delete">Delete</string>
    <string name="lesson">Lesson</string>
    <string name="add_lesson">Add lesson</string>
    <string name="enter_auditory">Please enter auditory</string>
    <string name="enter_group">Please select at least one group</string>
    <string name="date_hint">Date</string>
    <string name="time_start_hint">Start time</string>
    <string name="default_start_time">12:00</string>
    <string name="zero_groups_error">Add at least one group!</string>
    <string name="zero_subjects_error">Add at least one subject!</string>
    <string name="enter_title">Please enter a title</string>
    <string name="time_end_hint">End time</string>
    <string name="default_end_time">13:30</string>
    <string name="notes_hint">Notes</string>
    <string name="notes_hint_double">Notes:</string>
    <string name="start_control">Start control</string>
    <string name="students_double">Students:</string>
    <string name="lesson_details_datetime">%1$s | %2$s - %3$s</string>
    <string name="ask_delete_lesson">Do you want to delete this lesson?</string>
    <string name="invalid_times">The start time of the lesson must be greater than the end time!</string>
    <string name="registered_students">Registered students: %d/%d</string>
    <string name="stop_control">Stop control</string>
    <string name="end_control">Control completed</string>
    <string name="early_control">Early to start</string>
    <string name="ap_error">Error creating access point</string>
    <string name="ap_stopped">The access point turns off</string>
    <string name="ap_started">The access point was turned on</string>
    <string name="cant_create_ap">Can\'t create access point because the app doesn\'t have permissions. Go to app settings</string>
    <string name="starting_control">Starting…</string>
    <string name="stopping_control">Stopping…</string>
    <string name="ask_turn_off_ap_while_running">Do you want to turn off the access point?</string>
    <string name="back_while_control">Do you want to stop control?</string>
    <string name="ap_settings_title">Access point</string>
    <string name="global_settings_title">Global settings</string>
    <string name="ssid_hint">Name</string>
    <string name="open_settings">Open settings</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="empty_ssid">AP\'s name cannot be empty</string>
    <string name="saved_data">Data saved</string>
    <string name="default_ssid">Teacher hotspot</string>
    <string name="ap_info">AP\'s name: %s</string>
    <string name="permissions_fine">Permissions are fine!</string>
    <string name="permissions_fail">Permissions are required to create an access point!</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_check_error">Permission check error</string>
    <string name="ask_stop_control">Do you really want to stop control?</string>
    <string name="create_ap_hint">To start monitoring, you must configure the access point and launch it, then tell students the name and password if necessary. Before doing this, it is recommended to turn off the mobile Internet.\n\nWant to go to settings?</string>
    <string name="create_ap">Create AP</string>
</resources>