<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/bottomNavigationFragment">

    <fragment
        android:id="@+id/bottomNavigationFragment"
        android:name="com.nstuproject.studentcontrol.fragment.BottomNavigationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_bottom_navigation">
        <action
            android:id="@+id/action_bottomNavigationFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_bottomNavigationFragment_to_studentsFragment"
            app:destination="@id/studentsFragment" />
        <action
            android:id="@+id/action_bottomNavigationFragment_to_lessonDetailsFragment"
            app:destination="@id/lessonDetailsFragment" />
        <action
            android:id="@+id/action_bottomNavigationFragment_to_newLessonFragment"
            app:destination="@id/newLessonFragment" />
        <action
            android:id="@+id/action_bottomNavigationFragment_to_studentsFragment2"
            app:destination="@id/studentsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editLessonFragment"
        android:name="com.nstuproject.studentcontrol.fragment.EditLessonFragment"
        android:label="@string/edit"
        tools:layout="@layout/fragment_edit_lesson">
        <action
            android:id="@+id/action_editLessonFragment_to_bottomNavigationFragment"
            app:destination="@id/bottomNavigationFragment" />
        <action
            android:id="@+id/action_editLessonFragment_to_lessonDetailsFragment"
            app:destination="@id/lessonDetailsFragment"
            app:popUpTo="@id/bottomNavigationFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.nstuproject.studentcontrol.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/studentsFragment"
        android:name="com.nstuproject.studentcontrol.fragment.StudentsFragment"
        tools:layout="@layout/fragment_students" />
    <fragment
        android:id="@+id/lessonDetailsFragment"
        android:name="com.nstuproject.studentcontrol.fragment.LessonDetailsFragment"
        android:label="@string/lesson"
        tools:layout="@layout/fragment_lesson_details">
        <action
            android:id="@+id/action_lessonDetailsFragment_to_editLessonFragment"
            app:destination="@id/editLessonFragment" />
    </fragment>
    <fragment
        android:id="@+id/newLessonFragment"
        android:name="com.nstuproject.studentcontrol.fragment.NewLessonFragment"
        android:label="@string/add_lesson"
        tools:layout="@layout/fragment_edit_lesson" />
</navigation>