<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/common_spacing"
        android:paddingVertical="@dimen/tiny_spacing">

        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Android-разработка" />

        <TextView
            android:id="@+id/datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subject"
            tools:text="20.03.2024 | 12:00 - 13:30" />

        <ImageView
            android:id="@+id/placemark"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/auditory"
            android:src="@drawable/baseline_place_24"
            app:layout_constraintBottom_toBottomOf="@id/auditory"
            app:layout_constraintEnd_toStartOf="@id/auditory"
            app:layout_constraintTop_toTopOf="@id/auditory" />

        <TextView
            android:id="@+id/auditory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_spacing"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/datetime"
            tools:text="7-1" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lesson_type"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datetime"
            tools:text="Лекция" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type"
            tools:text="Инъекция зависимостей. Библиотека Dagger Hilt" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_spacing"
            android:text="@string/groups_hint"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/card_group_select" />

        <LinearLayout
            android:id="@+id/notesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_spacing"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groups">

            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_hint_double"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/small_spacing"
                android:textSize="14sp"
                tools:text="@tools:sample/lorem[30]" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startControl"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_spacing"
            android:text="@string/start_control"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notesLayout" />

        <TextView
            android:id="@+id/registeredCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:paddingHorizontal="@dimen/small_spacing"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startControl"
            tools:text="@string/registered_students" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registeredCount"
            tools:listitem="@layout/card_registered_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>